--- a/index.html
+++ b/index.html
@@ -15,43 +15,18 @@
       color: #333;
     }
     #qr-value {
-      font-size: 18px;
+      font-size: 20px;
       margin: 15px 0;
-      padding: 10px;
+      padding: 12px;
       background-color: #e1ffe1;
-      display: inline-block;
       border-radius: 8px;
-    }
-    table {
-      margin: 20px auto;
-      border-collapse: collapse;
-      width: 90%;
-      max-width: 500px;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      font-size: 14px;
-    }
-    th {
-      background-color: #eee;
+      display: inline-block;
     }
   </style>
 </head>
 <body>
-  <h1>Donnée reçue</h1>
+  <h1>Donnée QR Code Reçue</h1>
   <div id="qr-value">Aucune donnée reçue</div>
-
-  <h2>Historique</h2>
-  <table id="history-table">
-    <thead>
-      <tr>
-        <th>QR Code</th>
-        <th>Date/Heure</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
 
   <script>
     function getQueryParam(name) {
@@ -59,28 +34,20 @@
       return urlParams.get(name);
     }
 
-    function saveToHistory(qrValue) {
-      const history = JSON.parse(localStorage.getItem("qr_history") || "[]");
-      history.unshift({ value: qrValue, time: new Date().toLocaleString() });
-      localStorage.setItem("qr_history", JSON.stringify(history));
-    }
-
-    function renderHistory() {
-      const tbody = document.querySelector("#history-table tbody");
-      const history = JSON.parse(localStorage.getItem("qr_history") || "[]");
-      tbody.innerHTML = "";
-      history.forEach(entry => {
-        const row = `<tr><td>${entry.value}</td><td>${entry.time}</td></tr>`;
-        tbody.insertAdjacentHTML("beforeend", row);
-      });
+    function updateDisplay(qrValue) {
+      document.getElementById("qr-value").innerText = qrValue;
+      localStorage.setItem("last_qr", qrValue);
     }
 
     const qr = getQueryParam("qr");
     if (qr) {
-      document.getElementById("qr-value").innerText = qr;
-      saveToHistory(qr);
+      updateDisplay(qr);
+    } else {
+      const savedQr = localStorage.getItem("last_qr");
+      if (savedQr) {
+        document.getElementById("qr-value").innerText = savedQr;
+      }
     }
-    renderHistory();
   </script>
 </body>
 </html>
