--- a/index.html
+++ b/index.html
@@ -3,79 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Réception QR Code</title>
+  <title>Scan QR Code</title>
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       text-align: center;
-      padding: 20px;
-      background-color: #f4f4f4;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
     }
-    #qr-value {
-      font-size: 18px;
-      margin: 15px 0;
-      padding: 10px;
-      background-color: #e1ffe1;
-      display: inline-block;
-      border-radius: 8px;
-    }
-    table {
+    #reader {
+      width: 100%;
+      max-width: 400px;
       margin: 20px auto;
-      border-collapse: collapse;
-      width: 90%;
-      max-width: 500px;
     }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      font-size: 14px;
-    }
-    th {
-      background-color: #eee;
+    #result {
+      margin-top: 20px;
+      font-size: 18px;
+      font-weight: bold;
+      color: green;
     }
   </style>
 </head>
 <body>
-  <h1>Donnée reçue</h1>
-  <div id="qr-value">Aucune donnée</div>
-
-  <h2>Historique</h2>
-  <table id="history-table">
-    <thead>
-      <tr>
-        <th>QR Code</th>
-        <th>Date/Heure</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+  <h2>Scan automatique du QR Code</h2>
+  <div id="reader"></div>
+  <div id="result">En attente du scan...</div>
 
   <script>
-    const value = sessionStorage.getItem("qr_value");
+    const resultEl = document.getElementById("result");
+    const html5QrCode = new Html5Qrcode("reader");
 
-    function saveToHistory(qr) {
-      const history = JSON.parse(localStorage.getItem("qr_history") || "[]");
-      history.unshift({ value: qr, time: new Date().toLocaleString() });
-      localStorage.setItem("qr_history", JSON.stringify(history));
-    }
+    // Récupération nom/prénom depuis URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const nom = urlParams.get("nom") || "";
+    const prenom = urlParams.get("prenom") || "";
 
-    function renderHistory() {
-      const tbody = document.querySelector("#history-table tbody");
-      const history = JSON.parse(localStorage.getItem("qr_history") || "[]");
-      tbody.innerHTML = "";
-      history.forEach(entry => {
-        const row = `<tr><td>${entry.value}</td><td>${entry.time}</td></tr>`;
-        tbody.insertAdjacentHTML("beforeend", row);
+    function onScanSuccess(decodedText) {
+      html5QrCode.stop().then(() => {
+        resultEl.innerText = "Donnée détectée, redirection...";
+
+        // Création de l’URL de redirection avec données
+        const redirectUrl = `https://nohoarii96.github.io/recuperation/?qr=${encodeURIComponent(decodedText)}&nom=${nom}&prenom=${prenom}`;
+
+        // Redirection après une pause de 1s
+        setTimeout(() => {
+          window.location.href = redirectUrl;
+        }, 1000);
       });
     }
 
-    if (value) {
-      document.getElementById("qr-value").innerText = value;
-      saveToHistory(value);
-      sessionStorage.removeItem("qr_value"); // pour éviter d'afficher à nouveau au rechargement
-    }
+    // Démarrage du scanner
+    Html5Qrcode.getCameras().then(devices => {
+      if (devices.length) {
+        const backCamera = devices.find(device =>
+          device.label.toLowerCase().includes("back") ||
+          device.label.toLowerCase().includes("environment")
+        ) || devices[0];
 
-    renderHistory();
+        html5QrCode.start(
+          backCamera.id,
+          { fps: 10, qrbox: 250 },
+          onScanSuccess
+        );
+      } else {
+        resultEl.innerText = "Aucune caméra détectée.";
+      }
+    }).catch(err => {
+      resultEl.innerText = "Erreur d'accès caméra : " + err;
+    });
   </script>
 </body>
 </html>
